tests/ui/type/type-check/cannot_infer_local_or_vec.rs
fn main() {
    let x = vec![];
    //~^ ERROR type annotations needed
}
